fix photo too large error, fix description and component too tight bug

--- a/src/mains/printable.css
+++ b/src/mains/printable.css
@@ -17,7 +17,7 @@
 }
 
 .component-topper {
-    padding-top: 6px;
+    padding-top: 10px;
     padding-left: 3px;
     padding-right: 3px;
 }
